--- a/Commodities_Futures_Contracts_Generator.ipynb
+++ b/Commodities_Futures_Contracts_Generator.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "3HPX04zWR7UP"
       ],
-      "authorship_tag": "ABX9TyPgDJrdcOTYj9sLPnVV4+8J",
+      "authorship_tag": "ABX9TyN1oTkID74/sExECC+lSKtD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1859,10 +1859,10 @@
         "  # Generate lower-band\n",
         "  signal_df[label+\"_\"+'lower_bnd'] = signal_df[label+\"_\"+'SMA'] - signal_df[label+\"_\"+'ST_DV'] * 2\n",
         "\n",
-        "  # When Actual Returns are greater than or equal to 0, generate signal to buy stock long\n",
+        "  # When Close is greater than or equal to 0, generate signal to buy stock long\n",
         "  signal_df.loc[(signal_df[label+\"_\"+\"Close\"] < signal_df[label+\"_\"+\"lower_bnd\"]), label+\"_\"+\"Signal\"] = 1\n",
         "\n",
-        "  # When Actual Returns are less than 0, generate signal to sell stock short\n",
+        "  # When Close are less than 0, generate signal to sell stock short\n",
         "  signal_df.loc[(signal_df[label+\"_\"+\"Close\"] > signal_df[label+\"_\"+\"upper_bnd\"]), label+\"_\"+\"Signal\"] = -1\n",
         "\n",
         "  return signal_df"
@@ -1870,7 +1870,7 @@
       "metadata": {
         "id": "0gi9ol3rQgpR"
       },
-      "execution_count": 9,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -1979,13 +1979,15 @@
         "def preprocess_sma_signals(signals_df,label,offset_years):\n",
         "  # Prepare the data\n",
         "\n",
-        "  ## create features & target sets\n",
-        "  X = signals_df[[label+\"_\"+\"SMA_Slow\",label+\"_\"+\"SMA_Fast\"]].copy()\n",
-        "  y = signals_df[[label+\"_\"+\"Signal\"]].copy()\n",
+        "  # create features & target sets\n",
+        "  X = signals_df[[label+\"_\"+\"SMA_Slow\",label+\"_\"+\"SMA_Fast\"]].shift().dropna()\n",
+        "  y = signals_df[[label+\"_\"+\"Signal\"]].shift().dropna()\n",
+        "  y_DMAC = signals_df[[label+\"_\"+\"DMAC_Signal\"]].shift().dropna()\n",
         "\n",
         "  #sort ascending\n",
         "  X.sort_index(inplace=True)\n",
         "  y.sort_index(inplace=True)\n",
+        "  y_DMAC.sort_index(inplace=True)\n",
         "\n",
         "  #split data into train, test\n",
         "\n",
@@ -1997,10 +1999,12 @@
         "  # Generate the X_train and y_train DataFrames\n",
         "  X_train = X.loc[training_begin:training_end]\n",
         "  y_train = y.loc[training_begin:training_end]\n",
+        "  y_train_DMAC = y_DMAC.loc[training_begin:training_end]\n",
         "\n",
         "  # Generate the X_test and y_test DataFrames\n",
         "  X_test = X.loc[training_end:]\n",
         "  y_test = y.loc[training_end:]\n",
+        "  y_test_DMAC = y_DMAC.loc[training_end:]\n",
         "\n",
         "  #scale data\n",
         "\n",
@@ -2014,12 +2018,12 @@
         "  X_train_scaled = X_scaler.transform(X_train)\n",
         "  X_test_scaled = X_scaler.transform(X_test)\n",
         "\n",
-        "  return (X,y,X_train,y_train,X_test,y_test,X_train_scaled,X_test_scaled)"
+        "  return (X,y,y_DMAC,X_train,y_train,y_train_DMAC,X_test,y_test,y_test_DMAC,X_train_scaled,X_test_scaled)"
       ],
       "metadata": {
         "id": "a0gZkW5h-P3N"
       },
-      "execution_count": 11,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -2038,8 +2042,8 @@
         "  # Prepare the data\n",
         "\n",
         "  ## create features & target sets\n",
-        "  X = signals_df[[label+\"_\"+\"upper_bnd\",label+\"_\"+\"lower_bnd\"]].copy()\n",
-        "  y = signals_df[[label+\"_\"+\"Signal\"]].copy()\n",
+        "  X = signals_df[[label+\"_\"+\"upper_bnd\",label+\"_\"+\"lower_bnd\"]].shift().dropna()\n",
+        "  y = signals_df[[label+\"_\"+\"Signal\"]].shift().dropna()\n",
         "\n",
         "  #sort ascending\n",
         "  X.sort_index(inplace=True)\n",
@@ -2077,7 +2081,7 @@
       "metadata": {
         "id": "STV9pXAkRq2Y"
       },
-      "execution_count": 12,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -2638,13 +2642,42 @@
     {
       "cell_type": "code",
       "source": [
-        "X,y,X_train,y_train,X_test,y_test,X_train_scaled,X_test_scaled = preprocess_sma_signals(sma_platinum_df,\"platinum\",7)"
+        "X,y,y_DMAC,X_train,y_train,y_train_DMAC,X_test,y_test,y_test_DMAC,X_train_scaled,X_test_scaled = preprocess_sma_signals(sma_platinum_df,\"platinum\",7)"
       ],
       "metadata": {
         "id": "4c2Ad5iaLfpt"
       },
-      "execution_count": 25,
+      "execution_count": 42,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train_DMAC.value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z7CXGWY1ev4H",
+        "outputId": "ac99bd6f-9a8d-4a2d-ccb6-4d4eee132a52"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "platinum_DMAC_Signal\n",
+              "1.0                     1045\n",
+              "0.0                      682\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2656,9 +2689,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y8OTwc_SawCd",
-        "outputId": "b60eb12a-aa17-45b1-f05e-32a6b6619ab8"
+        "outputId": "2fddafe7-e93d-4cb8-9a78-597ad1d3fb48"
       },
-      "execution_count": 28,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2672,7 +2705,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 39
         }
       ]
     },
@@ -3973,6 +4006,26 @@
       ],
       "metadata": {
         "id": "WPG3AR1Gx2D_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Apply SVM"
+      ],
+      "metadata": {
+        "id": "fSey6yMOjacO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "nnnSiixojcDc"
       },
       "execution_count": null,
       "outputs": []
