DMAC Entry/Exit

--- a/Commodities_Futures_Contracts_Generator.ipynb
+++ b/Commodities_Futures_Contracts_Generator.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "3HPX04zWR7UP"
       ],
-      "authorship_tag": "ABX9TyN1oTkID74/sExECC+lSKtD",
+      "authorship_tag": "ABX9TyOY2gSpRuKYUC8b5fCCxKyi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1795,6 +1795,7 @@
         "  signal_df[label+\"_\"+'SMA_Slow'] = 0.0\n",
         "  signal_df[label+\"_\"+'SMA_Fast'] = 0.0\n",
         "  signal_df[label+\"_\"+\"Signal\"] = 0.0\n",
+        "  signal_df[label+\"_\"+\"DMAC_Indicator\"] = 0.0\n",
         "  signal_df[label+\"_\"+\"DMAC_Signal\"] = 0.0\n",
         "\n",
         "  # Generate the fast and slow simple moving averages (fast and slow, respectively)\n",
@@ -1812,16 +1813,19 @@
         "  # Generate DMAC signal\n",
         "  # where 1 is when the SMA_Fast is less than the SMA_Slow\n",
         "  # where 0 is when the SMA_Fast is greater than than the SMA_Slow\n",
-        "  signal_df[label+\"_\"+\"DMAC_Signal\"][short_window:] = np.where(\n",
+        "  signal_df[label+\"_\"+\"DMAC_Indicator\"][short_window:] = np.where(\n",
         "      signal_df[label+\"_\"+'SMA_Fast'][short_window:] < signal_df[label+\"_\"+'SMA_Slow'][short_window:], 1.0, 0.0\n",
         "  )\n",
+        "\n",
+        "  # Calculate the points in time at which a position should be taken, 1 or -1\n",
+        "  signal_df[label+\"_\"+\"DMAC_Signal\"] = signal_df[label+\"_\"+\"DMAC_Indicator\"].diff()\n",
         "\n",
         "  return signal_df\n"
       ],
       "metadata": {
         "id": "niT5H-x28IOe"
       },
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -2212,7 +2216,7 @@
       "cell_type": "code",
       "source": [
         "platinum_df = prepare_data(\"/content/Historical_commodities_data/AmarkPriceHistory_platinum.csv\",\"platinum\")\n",
-        "sma_platinum_df = apply_sma_signal(platinum_df,10,80,\"platinum\")\n",
+        "# sma_platinum_df = apply_sma_signal(platinum_df,10,80,\"platinum\")\n",
         "bllg_platinum_df = apply_bllg_signal(platinum_df,20,\"platinum\")\n",
         "display(sma_platinum_df.head())\n",
         "display(bllg_platinum_df.head())"
@@ -2223,9 +2227,9 @@
           "height": 843
         },
         "id": "71_NwTjZOVrg",
-        "outputId": "817bcc78-6bbf-4341-e212-1ac0a72850e6"
+        "outputId": "1e9469b9-ad08-44f7-aa32-385db341d326"
       },
-      "execution_count": 24,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -2266,17 +2270,25 @@
               "2012-10-02          1677.0         -0.006811         1496.40000   \n",
               "2012-10-03          1688.5         -0.017171         1499.19375   \n",
               "\n",
-              "            platinum_SMA_Fast  platinum_Signal  platinum_DMAC_Signal  \n",
-              "Date                                                                  \n",
-              "2012-09-27            1645.20             -1.0                   0.0  \n",
-              "2012-09-28            1640.55             -1.0                   0.0  \n",
-              "2012-10-01            1641.65              1.0                   0.0  \n",
-              "2012-10-02            1646.30             -1.0                   0.0  \n",
-              "2012-10-03            1651.15             -1.0                   0.0  "
+              "            platinum_SMA_Fast  platinum_Signal  platinum_DMAC_Indicator  \\\n",
+              "Date                                                                      \n",
+              "2012-09-27            1645.20             -1.0                      0.0   \n",
+              "2012-09-28            1640.55             -1.0                      0.0   \n",
+              "2012-10-01            1641.65              1.0                      0.0   \n",
+              "2012-10-02            1646.30             -1.0                      0.0   \n",
+              "2012-10-03            1651.15             -1.0                      0.0   \n",
+              "\n",
+              "            platinum_DMAC_Signal  \n",
+              "Date                              \n",
+              "2012-09-27                   NaN  \n",
+              "2012-09-28                   0.0  \n",
+              "2012-10-01                   0.0  \n",
+              "2012-10-02                   0.0  \n",
+              "2012-10-03                   0.0  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-473e2227-478d-49e7-b437-8141764f37ca\">\n",
+              "  <div id=\"df-0543767f-fcce-4b11-ae88-2ee16b1927ef\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2301,10 +2313,12 @@
               "      <th>platinum_SMA_Slow</th>\n",
               "      <th>platinum_SMA_Fast</th>\n",
               "      <th>platinum_Signal</th>\n",
+              "      <th>platinum_DMAC_Indicator</th>\n",
               "      <th>platinum_DMAC_Signal</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Date</th>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
@@ -2322,6 +2336,7 @@
               "      <td>1645.20</td>\n",
               "      <td>-1.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2012-09-28</th>\n",
@@ -2330,6 +2345,7 @@
               "      <td>1490.66250</td>\n",
               "      <td>1640.55</td>\n",
               "      <td>-1.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -2340,6 +2356,7 @@
               "      <td>1641.65</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2012-10-02</th>\n",
@@ -2348,6 +2365,7 @@
               "      <td>1496.40000</td>\n",
               "      <td>1646.30</td>\n",
               "      <td>-1.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -2358,11 +2376,12 @@
               "      <td>1651.15</td>\n",
               "      <td>-1.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-473e2227-478d-49e7-b437-8141764f37ca')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0543767f-fcce-4b11-ae88-2ee16b1927ef')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2413,12 +2432,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-473e2227-478d-49e7-b437-8141764f37ca button.colab-df-convert');\n",
+              "          document.querySelector('#df-0543767f-fcce-4b11-ae88-2ee16b1927ef button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-473e2227-478d-49e7-b437-8141764f37ca');\n",
+              "          const element = document.querySelector('#df-0543767f-fcce-4b11-ae88-2ee16b1927ef');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2464,7 +2483,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-93765491-976a-4971-afeb-c712616d668c\">\n",
+              "  <div id=\"df-68d5c867-13d8-4f5d-b8e9-b93c50856fba\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2557,7 +2576,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93765491-976a-4971-afeb-c712616d668c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-68d5c867-13d8-4f5d-b8e9-b93c50856fba')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2608,12 +2627,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-93765491-976a-4971-afeb-c712616d668c button.colab-df-convert');\n",
+              "          document.querySelector('#df-68d5c867-13d8-4f5d-b8e9-b93c50856fba button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-93765491-976a-4971-afeb-c712616d668c');\n",
+              "          const element = document.querySelector('#df-68d5c867-13d8-4f5d-b8e9-b93c50856fba');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2647,7 +2666,7 @@
       "metadata": {
         "id": "4c2Ad5iaLfpt"
       },
-      "execution_count": 42,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -2660,22 +2679,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z7CXGWY1ev4H",
-        "outputId": "ac99bd6f-9a8d-4a2d-ccb6-4d4eee132a52"
+        "outputId": "b384fc17-9786-4075-e5f0-d6cde2ab53e9"
       },
-      "execution_count": 43,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "platinum_DMAC_Signal\n",
-              "1.0                     1045\n",
-              "0.0                      682\n",
+              " 0.0                    1690\n",
+              "-1.0                      18\n",
+              " 1.0                      18\n",
               "dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 57
         }
       ]
     },
@@ -2689,9 +2709,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y8OTwc_SawCd",
-        "outputId": "2fddafe7-e93d-4cb8-9a78-597ad1d3fb48"
+        "outputId": "09a5a74d-75ab-4792-a7fb-3bb307d32960"
       },
-      "execution_count": 39,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2705,7 +2725,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 53
         }
       ]
     },
